# binance-api-cpp

./: CMakeLists.txt
src/: main.cpp
src/binance/: binanceWebsocket.cpp  binanceWebsocket.h
src/trade/: TradeProcess.cpp  TradeProcess.hpp
